--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 		
 		document.addEventListener("deviceready", function ()
 		{
+			navigator.splashscreen.hide();
 			window["c2isphonegap"] = true;
 			
 			// Create new runtime using the c2canvas
